fix performance to Ensure text remains visible during webfont load

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,7 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-display: swap;
 }
 
 :root {
